./generate-from-yaml.sh
